--- a/index.html
+++ b/index.html
@@ -740,8 +740,7 @@
                                                 url:"https://youtube.com/playlist?list=OLAK5uy_n_lzPObcwzQR-CrPavLkKudihJ4u-Ale8&si=cv6W6BmrxFXdgeEu",
                                             },
                                             {
-                                                name:"Fall into funk",
-                                                url:"https://youtu.be/4Rfw5p8_Y-0?si=5qR5t1JahwHqA7Bs",
+                                                name:"Fall into funk"
                                             },
                                         ]
                                     },
