--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             left: 30px;
             color:gray;
             text-shadow: 0px 0px 10px #FF2D00;
+            font-family: 'Times New Roman', Times, serif;
         }
         #zoomRange {
             position: fixed;
@@ -68,6 +69,7 @@
     /* color:#FF2D00;
     text-shadow: 0px 0px 10px black; */
     z-index: 100;
+    font-family: 'Times New Roman', Times, serif;
     
 }
 ::selection {
@@ -122,6 +124,7 @@
     transform: translateX(-10px);
 }
 #message {
+    font-family: 'Times New Roman', Times, serif;
     display: none; /* 처음에는 숨김 */
     font-size: 15px;
     position: fixed;
@@ -161,6 +164,7 @@
         z-index: 400;
     }
     #zoomdes {
+        font-family: 'Times New Roman', Times, serif;
         margin-bottom: 20px;
         padding: 3px;
         padding-left: 3px;
@@ -193,6 +197,7 @@
         transform: translate(10px,10px);
     }
     #maildes {
+        font-family: 'Times New Roman', Times, serif;
         display: flex;
         position: fixed;
         top: 450px;
